--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="sass/style.scss">
-  <title>Document</title>
+  <title>Travellian</title>
 </head>
 
 <body>
+  <header class="header">
+    <img src="/src/img/logo.svg" alt="Travellian logo" width="200" height="300">
+    <nav></nav>
+    <i class="fa-solid fa-bars"></i>
+  </header>
+  <main class="main-container">
+    <section class="main-form">
+      <section class="main-form__headings">
+        <span>Start your unforgettable journey with us.</span>
+        <span>The best travel for your journey begins now</span>
+      </section>
 
+      <form class="main-form">
+        <div class="main-form__imput">
+          <label>Destination<input type="text" required></label>
+        </div>
+        <div class="main-form__imput">
+          <label>Person<input type="number" required></label>
+        </div>
+        <div class="main-form__imput">
+          <label>Check in<input type="date" required></label>
+        </div>
+        <div class="main-form__imput">
+          <label>Check out<input type="date"></label>
+        </div>
+        <div class="main-form__submit">
+          <span>Book now</span>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </form>
+
+    </section>
+    <section>Popular destinations</section>
+    <section>Special offer</section>
+    <section>Our blog</section>
+    <section>Trip planners </section>
+    <section>Traveler's experiences</section>
+    <section>Our newsletter</section>
+    <footer>Travellian</footer>
+
+  </main>
 </body>
 
 </html>
