add special offer html structure

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,80 @@
 
     </section>
     <section>Popular destinations</section>
-    <section>Special offer</section>
+
+    <section>
+      <div>
+        <h2>Special Offer</h2>
+        <span>Check out our special offer and discounts</span>
+      </div>
+
+      <ul>
+
+        <li>
+          <article>
+            <img src="img/lisbon.jpg" alt="lisbon landscape">
+            <div>
+              <span>Lisbon, Portugal</span>
+              <span>★★★★★</span>
+              <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance.
+                Passage and
+                going through the cites of the world in classical literature.</p>
+            </div>
+            <div>
+              <div>
+                <span>From</span>
+                <span>€500</span>
+              </div>
+              <a href="details">Details</a>
+            </div>
+          </article>
+        </li>
+
+        <li>
+          <article>
+            <img src="img/athens.jpg" alt="Parthenon detail">
+            <div>
+              <span>Athens, Greece</span>
+              <span>★★★★★</span>
+              <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance.
+                Passage and
+                going through the cites of the world in classical literature.</p>
+            </div>
+            <div>
+              <div>
+                <span>From</span>
+                <span>€800</span>
+              </div>
+              <a href="details">Details</a>
+            </div>
+          </article>
+        </li>
+
+        <li>
+          <article>
+            <img src="img/venice.jpg" alt="Venice landscape">
+            <div>
+              <span>Venice, Italy</span>
+              <span>★★★★★</span>
+              <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance.
+                Passage and
+                going through the cites of the world in classical literature.</p>
+            </div>
+            <div>
+              <div>
+                <span>From</span>
+                <span>€750</span>
+              </div>
+              <a href="details">Details</a>
+            </div>
+          </article>
+        </li>
+      </ul>
+
+      <button><i class="fa-solid fa-angle-left"></i></button>
+      <button><i class="fa-solid fa-angle-right"></i></button>
+
+    </section>
     <section>Our blog</section>
     <section>Trip planners </section>
     <section>Traveler's experiences</section>
