--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="header">
-    <img src="/src/img/logo.svg" alt="Travellian logo" width="200" height="300">
+    <img src="img/logo.svg" alt="Travellian logo" width="200" height="300">
     <nav>
       <ul>
         <li>
@@ -64,13 +64,13 @@
     <section class="popular-destinations">
       <div>
         <h2>Popular Destinations</h2>
-        <span>Most popular destinations around the world, from historical places to natural wonders.</span>
+        <p>Most popular destinations around the world, from historical places to natural wonders.</p>
       </div>
       <ul>
         <li>
 
           <article>
-            <img src="/src/img/berlin.jpg" alt="monument of berlin">
+            <img src="img/berlin.jpg" alt="monument of berlin">
             <div>
 
               <span>Monument of Berlin</span>
@@ -85,10 +85,7 @@
           <button><i class="fa-solid fa-angle-right"></i></button>
         </div>
       </ul>
-
-
     </section>
-    <section>Popular destinations</section>
 
     <section>
       <div>
@@ -163,7 +160,43 @@
       <button><i class="fa-solid fa-angle-right"></i></button>
 
     </section>
-    <section>Our blog</section>
+
+
+    <section class="our-blog">
+      <div>
+        <h2>Our Blog</h2>
+        <span>An insight the incredible experience in the world</span>
+      </div>
+      <ul>
+        <li>
+          <article>
+            <img src="img/coast.jpg" alt="coast sight">
+            <div>
+              <p>Beautiful Italy Let&#39s travel</p>
+              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
+                born and I will give
+                you a complete account of the system and expound the actual teachings of the great explorer of the
+                truth, the master-
+                builder of human happiness. No one rejects, dislike, or avoids pleasure itself, because it is pleasure,
+                but because those
+                who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor
+                again is there
+                anyone who loves or pursues.</p>
+            </div>
+          </article>
+        </li>
+        <a href="">Read More<i class="fa-solid fa-arrow-right"></i></a>
+      </ul>
+
+
+    </section>
+
+
+
+
+
+
+
     <section>Trip planners</section>
     <section>Traveler's experiences</section>
     <section>Our newsletter</section>
