--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
   <header class="header">
     <img src="/src/img/logo.svg" alt="Travellian logo" width="200" height="300">
     <nav>
@@ -34,7 +35,9 @@
     </nav>
     <i class="fa-solid fa-bars"></i>
   </header>
+
   <main class="main-container">
+
     <section class="main-form">
       <section class="main-form__headings">
         <span>Start your unforgettable journey with us.</span>
@@ -61,6 +64,8 @@
       </form>
 
     </section>
+
+
     <section class="popular-destinations">
       <div>
         <h2>Popular Destinations</h2>
@@ -86,9 +91,7 @@
         </div>
       </ul>
 
-
     </section>
-    <section>Popular destinations</section>
 
     <section>
       <div>
@@ -164,7 +167,83 @@
 
     </section>
     <section>Our blog</section>
-    <section>Trip planners</section>
+
+
+    <section>
+      <div>
+        <h2>Trip Planners</h2>
+        <p>20 years from now you will be more disappointed by the things that you didnU+2019t do. Stop regretting and
+          start
+          travelling,
+          start throwing off the bowlines.</p>
+      </div>
+      <ul>
+        <li>
+          <article>
+            <img src="img/rome.jpg" alt="Rome Coliseum">
+            <div>
+              <span>Guided Tour</span>
+              <span>€99/Day</span>
+            </div>
+            <span>Rome City Tour</span>
+            <div>
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
+
+        <li>
+          <article>
+            <img src="img/paris.jpg" alt="Eiffel tower">
+            <div>
+              <span>Guided Tour</span>
+              <span>€95/Day</span>
+            </div>
+            <span>Paris City Tour</span>
+            <div>
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
+
+        <li>
+          <article>
+            <img src="img/barcelona.jpg" alt="Barcelona streets">
+            <div>
+              <span>Guided Tour</span>
+              <span>€89/Day</span>
+            </div>
+            <span>Barcelona City Tour</span>
+            <div>
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
+
+        <li>
+          <article>
+            <img src="img/budapest.jpg" alt="Budapest sculpture">
+            <div>
+              <span>Guided Tour</span>
+              <span>€89/Day</span>
+            </div>
+            <span>Barcelona City Tour</span>
+            <div>
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
+      </ul>
+
+      <button>View all trip plans</button>
+
+    </section>
+
+
     <section>Traveler's experiences</section>
     <section>Our newsletter</section>
     <footer>Travellian</footer>
