--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <header class="header">
-    <img src="/src/img/logo.svg" alt="Travellian logo" width="200" height="300">
+    <img src="img/logo.svg" alt="Travellian logo" width="200" height="300">
     <nav>
       <ul>
         <li>
@@ -69,13 +69,13 @@
     <section class="popular-destinations">
       <div>
         <h2>Popular Destinations</h2>
-        <span>Most popular destinations around the world, from historical places to natural wonders.</span>
+        <p>Most popular destinations around the world, from historical places to natural wonders.</p>
       </div>
       <ul>
         <li>
 
           <article>
-            <img src="/src/img/berlin.jpg" alt="monument of berlin">
+            <img src="img/berlin.jpg" alt="monument of berlin">
             <div>
 
               <span>Monument of Berlin</span>
@@ -166,31 +166,50 @@
       <button><i class="fa-solid fa-angle-right"></i></button>
 
     </section>
-    <section>Our blog</section>
 
+    <section class="our-blog">
+      <div>
+        <h2>Our Blog</h2>
+        <span>An insight the incredible experience in the world</span>
+      </div>
+      <ul>
+        <li>
+          <article>
+            <div>
+              <p>Beautiful Italy Let&#39s travel</p>
+              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
+                born and I will give
+                you a complete account of the system and expound the actual teachings of the great explorer of the
+                truth, the master-
+                builder of human happiness. No one rejects, dislike, or avoids pleasure itself, because it is pleasure,
+                but because those
+                who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor
+                again is there
+                anyone who loves or pursues.</p>
+            </div>
+          </article>
+        </li>
+        <a href="">Read More<i class="fa-solid fa-arrow-right"></i></a>
+      </ul>
+
+    </section>
 
     <section>
       <div>
         <h2>Trip Planners</h2>
         <p>20 years from now you will be more disappointed by the things that you didnU+2019t do. Stop regretting and
-          start
-          travelling,
-          start throwing off the bowlines.</p>
-      </div>
-      <ul>
-        <li>
-          <article>
-            <img src="img/rome.jpg" alt="Rome Coliseum">
-            <div>
-              <span>Guided Tour</span>
-              <span>€99/Day</span>
-            </div>
-            <span>Rome City Tour</span>
-            <div>
-              <span>★★★★★</span>
-              <span>7 Days tour</span>
-            </div>
-          </article>
+          start travelling, start throwing off the bowlines.</p>
+        <img src="img/rome.jpg" alt="Rome Coliseum">
+        <div>
+          <span>Guided Tour</span>
+          <span>€99/Day</span>
+        </div>
+        <span>Rome City Tour</span>
+        <div>
+          <span>★★★★★</span>
+          <span>7 Days tour</span>
+        </div>
+        </article>
         </li>
 
         <li>
@@ -237,16 +256,14 @@
             </div>
           </article>
         </li>
-      </ul>
+        </ul>
 
-      <button>View all trip plans</button>
+        <button>View all trip plans</button>
+        <img src="img/coast.jpg" alt="coast sight">
 
-    </section>
-
-
-    <section>Traveler's experiences</section>
-    <section>Our newsletter</section>
-    <footer>Travellian</footer>
+        <section>Traveler's experiences</section>
+        <section>Our newsletter</section>
+        <footer>Travellian</footer>
 
   </main>
 </body>
