refactor header and main form

--- a/src/index.html
+++ b/src/index.html
@@ -37,34 +37,53 @@
       </ul>
     </nav>
     <i class="fa-solid fa-bars"></i>
+
+    <div>
+      <a href="login">Log in</a>
+      <a href="signup">Sign up</a>
+    </div>
+
   </header>
 
-  <main class="main-container">
-    <section class="main-form">
-      <section class="main-form__headings">
-        <span>Start your unforgettable journey with us.</span>
-        <span>The best travel for your journey begins now</span>
+  <main>
+
+    <section top-section>
+
+      <section class="top-section__headings">
+        <h1 class="top-section__main-heading">Start your unforgettable journey with us.</h1>
+        <span class="top-section__motto">The best travel for your journey begins now</span>
       </section>
 
-      <form class="main-form">
-        <div class="main-form__imput">
-          <label>Destination<input type="text" required></label>
-        </div>
-        <div class="main-form__imput">
-          <label>Person<input type="number" required></label>
-        </div>
-        <div class="main-form__imput">
-          <label>Check in<input type="date" required></label>
-        </div>
-        <div class="main-form__imput">
-          <label>Check out<input type="date"></label>
-        </div>
-        <div class="main-form__submit">
-          <span>Book now</span>
-          <i class="fa-solid fa-arrow-right"></i>
-        </div>
-      </form>
+      <section class="main-form">
+        <form class=>
 
+          <div class="main-form__input">
+            <label>Destination</label>
+            <input type="text" required>
+          </div>
+
+          <div class="main-form__input">
+            <label>Person</label>
+            <input type="number" required>
+          </div>
+
+          <div class="main-form__input">
+            <label>Check in</label>
+            <input type="date" required>
+          </div>
+
+          <div class="main-form__input">
+            <label>Check out</label>
+            <input type="date">
+          </div>
+
+          <div class="main-form__submit">
+            <span>Book now</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </form>
+
+      </section>
     </section>
 
 
