refactor special offer html structure

--- a/src/index.html
+++ b/src/index.html
@@ -136,28 +136,27 @@
 
     </section>
 
-    <section>
-      <div>
-        <h2>Special Offer</h2>
-        <span>Check out our special offer and discounts</span>
+    <section class="special-offer">
+      <div class="special-offer__heading">
+        <h2 class="special-offer__title">Special Offer</h2>
+        <span class="special-offer__description">Check out our special offer and discounts</span>
       </div>
 
-      <ul>
-
+      <ul class="special-offer__cards">
         <li>
-          <article>
-            <img src="img/lisbon.jpg" alt="lisbon landscape">
+          <article class="special-offer-card">
+            <img src="img/lisbon.jpg" alt="lisbon landscape" class="special-offer-card__image">
             <div>
-              <span>Lisbon, Portugal</span>
-              <span>★★★★★</span>
-              <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance.
-                Passage and
-                going through the cites of the world in classical literature.</p>
+              <span class="special-offer-card__title">Lisbon, Portugal</span>
+              <span class="special-offer-card__rating">★★★★★</span>
+              <p class="special-offer-card__description">5 nights and 4 days in 5 star hotel, breakfast and lunch
+                included. Very popular during the renaissance.
+                Passage and going through the cites of the world in classical literature.</p>
             </div>
             <div>
               <div>
                 <span>From</span>
-                <span>€500</span>
+                <span class="special-offer-card__price">€500</span>
               </div>
               <a href="details">Details</a>
             </div>
@@ -165,19 +164,19 @@
         </li>
 
         <li>
-          <article>
-            <img src="img/athens.jpg" alt="Parthenon detail">
+          <article class="special-offer-card">
+            <img src="img/athens.jpg" alt="Parthenon detail" class="special-offer-card__image">
             <div>
-              <span>Athens, Greece</span>
-              <span>★★★★★</span>
-              <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance.
-                Passage and
-                going through the cites of the world in classical literature.</p>
+              <span class="special-offer-card__title">Athens, Greece</span>
+              <span class="special-offer-card__rating">★★★★★</span>
+              <p class="special-offer-card__description">5 nights and 4 days in 5 star hotel, breakfast and lunch
+                included. Very popular during the renaissance.
+                Passage and going through the cites of the world in classical literature.</p>
             </div>
             <div>
               <div>
                 <span>From</span>
-                <span>€800</span>
+                <span class="special-offer-card__price">€800</span>
               </div>
               <a href="details">Details</a>
             </div>
@@ -185,19 +184,19 @@
         </li>
 
         <li>
-          <article>
-            <img src="img/venice.jpg" alt="Venice landscape">
+          <article class="special-offer-card">
+            <img src="img/venice.jpg" alt="Venice landscape" class="special-offer-card__image">
             <div>
-              <span>Venice, Italy</span>
-              <span>★★★★★</span>
-              <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance.
-                Passage and
-                going through the cites of the world in classical literature.</p>
+              <span class="special-offer-card__title">Venice, Italy</span>
+              <span class="special-offer-card__rating">★★★★★</span>
+              <p class="special-offer-card__description">5 nights and 4 days in 5 star hotel, breakfast and lunch
+                included. Very popular during the renaissance.
+                Passage and going through the cites of the world in classical literature.</p>
             </div>
             <div>
               <div>
                 <span>From</span>
-                <span>€750</span>
+                <span class="special-offer-card__price">€750</span>
               </div>
               <a href="details">Details</a>
             </div>
