--- a/src/index.html
+++ b/src/index.html
@@ -211,223 +211,226 @@
 
     <section class="our-blog">
       <div>
-        <h2>Our Blog</h2>
-        <span>An insight the incredible experience in the world</span>
+        <h2 class="our-blog__heading">Our Blog</h2>
+        <span class="our-blog__description">An insight the incredible experience in the world</span>
       </div>
-      <img src="img/coast.jpg" alt="coast sight">
+      <section class="our-blog-content">
+        <img src="img/coast.jpg" alt="coast sight" class="our-blog-content__image">
+        <div>
+          <p class="our-blog-content__title">Beautiful Italy Let&#39s travel</p>
+          <p class="our-blog-content__text">But I must explain to you how all this mistaken idea of denouncing pleasure
+            and praising pain was
+            born and I will give
+            you a complete account of the system and expound the actual teachings of the great explorer of the
+            truth, the master-
+            builder of human happiness. No one rejects, dislike, or avoids pleasure itself, because it is pleasure,
+            but because those
+            who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor
+            again is there
+            anyone who loves or pursues.</p>
+        </div>
+      </section>
+
+
+      <a href="">Read More<i class="fa-solid fa-arrow-right" class="our-blog-content__link"></i></a>
+    </section>
+
+    <section>
       <div>
-        <p>Beautiful Italy Let&#39s travel</p>
-        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
-          born and I will give
-          you a complete account of the system and expound the actual teachings of the great explorer of the
-          truth, the master-
-          builder of human happiness. No one rejects, dislike, or avoids pleasure itself, because it is pleasure,
-          but because those
-          who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor
-          again is there
-          anyone who loves or pursues.</p>
+        <h2>Trip Planners</h2>
+        <p>20 years from now you will be more disappointed by the things that you didnU+2019t do. Stop regretting and
+          start
+          travelling,
+          start throwing off the bowlines.</p>
+        <ul>
+          <li>
+            <article>
+              <img src="img/rome.jpg" alt="Rome Coliseum">
+              <div>
+                <span>Guided Tour</span>
+                <span>€99/Day</span>
+              </div>
+              <span>Rome City Tour</span>
+              <div>
+                <span>★★★★★</span>
+                <span>7 Days tour</span>
+              </div>
+            </article>
+          </li>
+
+          <li>
+            <article>
+              <img src="img/paris.jpg" alt="Eiffel tower">
+              <div>
+                <span>Guided Tour</span>
+                <span>€95/Day</span>
+              </div>
+              <span>Paris City Tour</span>
+              <div>
+                <span>★★★★★</span>
+                <span>7 Days tour</span>
+              </div>
+            </article>
+          </li>
+
+          <li>
+            <article>
+              <img src="img/barcelona.jpg" alt="Barcelona streets">
+              <div>
+                <span>Guided Tour</span>
+                <span>€89/Day</span>
+              </div>
+              <span>Barcelona City Tour</span>
+              <div>
+                <span>★★★★★</span>
+                <span>7 Days tour</span>
+              </div>
+            </article>
+          </li>
+
+          <li>
+            <article>
+              <img src="img/budapest.jpg" alt="Budapest sculpture">
+              <div>
+                <span>Guided Tour</span>
+                <span>€89/Day</span>
+              </div>
+              <span>Budapest City Tour</span>
+              <div>
+                <span>★★★★★</span>
+                <span>7 Days tour</span>
+              </div>
+            </article>
+          </li>
+        </ul>
+
+        <button>View all trip plans</button>
+    </section>
+
+    <section class="traveler-experiences">
+      <div>
+        <h2>Traveler&#39s Experiences</h2>
+        <span>Here some awesome feedback from our travelers</span>
       </div>
-      </article>
-      </li>
-      <a href="">Read More<i class="fa-solid fa-arrow-right"></i></a>
+      <ul>
+        <li>
+          <article>
+            <img src="img/avatar1.png" alt="John Doe">
+            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
+              and I will give
+              you a complete account of the system and expound the actual teachings of the great explorer of the
+              truth, the master-
+              builder of human happiness.</p>
+            <div>
+              <span>★★★★★</span>
+              <span>John Doe</span>
+              <span>Accountant</span>
+            </div>
+          </article>
+        </li>
+
+        <li>
+          <article>
+            <img src="img/avatar2.png" alt="John Smith">
+            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
+              and I will give
+              you a complete account of the system and expound the actual teachings of the great explorer of the
+              truth, the master-
+              builder of human happiness.</p>
+            <div>
+              <span>★★★★★</span>
+              <span>John Smith</span>
+              <span>Journalist, HWO News</span>
+            </div>
+          </article>
+        </li>
+
+        <li>
+          <article>
+            <img src="img/avatar3.png" alt="Tamara Bellis">
+            <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
+              and I will give
+              you a complete account of the system and expound the actual teachings of the great explorer of the
+              truth, the master-
+              builder of human happiness.</p>
+            <div>
+              <span>★★★★★</span>
+              <span>Tamara Bellis</span>
+              <span>Managing Director, JTH</span>
+            </div>
+          </article>
+        </li>
       </ul>
 
-      <section>
-        <div>
-          <h2>Trip Planners</h2>
-          <p>20 years from now you will be more disappointed by the things that you didnU+2019t do. Stop regretting and
-            start
-            travelling,
-            start throwing off the bowlines.</p>
+      <button><i class="fa-solid fa-angle-left"></i></button>
+      <button><i class="fa-solid fa-angle-right"></i></button>
+
+    </section>
+
+
+
+    <section>
+      <h2>Our Newsletter</h2>
+      <div>
+        <label for="email">Email</label>
+        <input id="email" type="email" placeholder="Enter your email">
+      </div>
+      <button type="submit">Subscribe</button>
+    </section>
+
+    <footer>
+      <ul>
+        <li>
+          <img src="img/logo.svg" alt="">
+          <span>Copyright © Sergi & Ana 2023 All rights reserved</span>
+        </li>
+
+        <li>
+          <span>Menu</span>
+          <ul>
+            <li>Home</li>
+            <li>Popular Destinations</li>
+            <li>Special Offer</li>
+            <li>Our Blog</li>
+            <li>Trip Planners</li>
+            <li>Traveler's Experiences</li>
+          </ul>
+        </li>
+
+        <li>
+          <span>Information</span>
+          <ul>
+            <li>Destinations</li>
+            <li>Supports</li>
+            <li>Special Offer</li>
+            <li>Terms & Conditions</li>
+            <li>Privacy</li>
+          </ul>
+        </li>
+
+        <li>
+          <span>Contact Info</span>
           <ul>
             <li>
-              <article>
-                <img src="img/rome.jpg" alt="Rome Coliseum">
-                <div>
-                  <span>Guided Tour</span>
-                  <span>€99/Day</span>
-                </div>
-                <span>Rome City Tour</span>
-                <div>
-                  <span>★★★★★</span>
-                  <span>7 Days tour</span>
-                </div>
-              </article>
+              <address><a href="tel:+123456789">+123 456 789</a></address>
             </li>
-
             <li>
-              <article>
-                <img src="img/paris.jpg" alt="Eiffel tower">
-                <div>
-                  <span>Guided Tour</span>
-                  <span>€95/Day</span>
-                </div>
-                <span>Paris City Tour</span>
-                <div>
-                  <span>★★★★★</span>
-                  <span>7 Days tour</span>
-                </div>
-              </article>
+              <address><a href="mailto:info@travellian.com">info@travellian.com</a></address>
             </li>
-
-            <li>
-              <article>
-                <img src="img/barcelona.jpg" alt="Barcelona streets">
-                <div>
-                  <span>Guided Tour</span>
-                  <span>€89/Day</span>
-                </div>
-                <span>Barcelona City Tour</span>
-                <div>
-                  <span>★★★★★</span>
-                  <span>7 Days tour</span>
-                </div>
-              </article>
-            </li>
-
-            <li>
-              <article>
-                <img src="img/budapest.jpg" alt="Budapest sculpture">
-                <div>
-                  <span>Guided Tour</span>
-                  <span>€89/Day</span>
-                </div>
-                <span>Budapest City Tour</span>
-                <div>
-                  <span>★★★★★</span>
-                  <span>7 Days tour</span>
-                </div>
-              </article>
-            </li>
+            <li>1245, New York, USA</li>
           </ul>
+        </li>
 
-          <button>View all trip plans</button>
-      </section>
+        <li>
+          <span>Follow us on</span>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-pinterest"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+        </li>
+      </ul>
 
-      <section class="traveler-experiences">
-        <div>
-          <h2>Traveler&#39s Experiences</h2>
-          <span>Here some awesome feedback from our travelers</span>
-        </div>
-        <ul>
-          <li>
-            <article>
-              <img src="img/avatar1.png" alt="John Doe">
-              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
-                and I will give
-                you a complete account of the system and expound the actual teachings of the great explorer of the
-                truth, the master-
-                builder of human happiness.</p>
-              <div>
-                <span>★★★★★</span>
-                <span>John Doe</span>
-                <span>Accountant</span>
-              </div>
-            </article>
-          </li>
-
-          <li>
-            <article>
-              <img src="img/avatar2.png" alt="John Smith">
-              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
-                and I will give
-                you a complete account of the system and expound the actual teachings of the great explorer of the
-                truth, the master-
-                builder of human happiness.</p>
-              <div>
-                <span>★★★★★</span>
-                <span>John Smith</span>
-                <span>Journalist, HWO News</span>
-              </div>
-            </article>
-          </li>
-
-          <li>
-            <article>
-              <img src="img/avatar3.png" alt="Tamara Bellis">
-              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
-                and I will give
-                you a complete account of the system and expound the actual teachings of the great explorer of the
-                truth, the master-
-                builder of human happiness.</p>
-              <div>
-                <span>★★★★★</span>
-                <span>Tamara Bellis</span>
-                <span>Managing Director, JTH</span>
-              </div>
-            </article>
-          </li>
-        </ul>
-
-        <button><i class="fa-solid fa-angle-left"></i></button>
-        <button><i class="fa-solid fa-angle-right"></i></button>
-
-      </section>
-
-
-
-      <section>
-        <h2>Our Newsletter</h2>
-        <div>
-          <label for="email">Email</label>
-          <input id="email" type="email" placeholder="Enter your email">
-        </div>
-        <button type="submit">Subscribe</button>
-      </section>
-
-      <footer>
-        <ul>
-          <li>
-            <img src="img/logo.svg" alt="">
-            <span>Copyright © Sergi & Ana 2023 All rights reserved</span>
-          </li>
-
-          <li>
-            <span>Menu</span>
-            <ul>
-              <li>Home</li>
-              <li>Popular Destinations</li>
-              <li>Special Offer</li>
-              <li>Our Blog</li>
-              <li>Trip Planners</li>
-              <li>Traveler's Experiences</li>
-            </ul>
-          </li>
-
-          <li>
-            <span>Information</span>
-            <ul>
-              <li>Destinations</li>
-              <li>Supports</li>
-              <li>Special Offer</li>
-              <li>Terms & Conditions</li>
-              <li>Privacy</li>
-            </ul>
-          </li>
-
-          <li>
-            <span>Contact Info</span>
-            <ul>
-              <li>
-                <address><a href="tel:+123456789">+123 456 789</a></address>
-              </li>
-              <li>
-                <address><a href="mailto:info@travellian.com">info@travellian.com</a></address>
-              </li>
-              <li>1245, New York, USA</li>
-            </ul>
-          </li>
-
-          <li>
-            <span>Follow us on</span>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-pinterest"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-          </li>
-        </ul>
-
-      </footer>
+    </footer>
 
   </main>
 
