refactor trip planners section in html

--- a/src/index.html
+++ b/src/index.html
@@ -231,80 +231,81 @@
         </div>
       </section>
 
-
       <a href="">Read More<i class="fa-solid fa-arrow-right" class="our-blog-content__link"></i></a>
     </section>
 
-    <section>
+    <section class="trip-planners">
       <div>
         <h2>Trip Planners</h2>
-        <p>20 years from now you will be more disappointed by the things that you didnU+2019t do. Stop regretting and
+        <p>20 years from now you will be more disappointed by the things that you didn&#39t do. Stop regretting and
           start
           travelling,
-          start throwing off the bowlines.</p>
-        <ul>
-          <li>
-            <article>
-              <img src="img/rome.jpg" alt="Rome Coliseum">
-              <div>
-                <span>Guided Tour</span>
-                <span>€99/Day</span>
-              </div>
-              <span>Rome City Tour</span>
-              <div>
-                <span>★★★★★</span>
-                <span>7 Days tour</span>
-              </div>
-            </article>
-          </li>
+          start throwing off the bowlines.
+        </p>
+      </div>
+      <ul class="trip-planners__cards">
+        <li>
+          <article class="trip-planners-card">
+            <img src="img/rome.jpg" alt="Rome Coliseum" class="trip-planners-card__image">
+            <div class="trip-planners-card__description">
+              <span>Guided Tour</span>
+              <span>€99/Day</span>
+            </div>
+            <span class="trip-planners-card__city">Rome City Tour</span>
+            <div>
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
 
-          <li>
-            <article>
-              <img src="img/paris.jpg" alt="Eiffel tower">
-              <div>
-                <span>Guided Tour</span>
-                <span>€95/Day</span>
-              </div>
-              <span>Paris City Tour</span>
-              <div>
-                <span>★★★★★</span>
-                <span>7 Days tour</span>
-              </div>
-            </article>
-          </li>
+        <li>
+          <article class="trip-planners-card">
+            <img src="img/paris.jpg" alt="Eiffel tower" class="trip-planners-card__image">
+            <div class="trip-planners-card__description">
+              <span>Guided Tour</span>
+              <span>€95/Day</span>
+            </div>
+            <span class="trip-planners-card__city">Paris City Tour</span>
+            <div class="trip-planners-card__rating">
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
 
-          <li>
-            <article>
-              <img src="img/barcelona.jpg" alt="Barcelona streets">
-              <div>
-                <span>Guided Tour</span>
-                <span>€89/Day</span>
-              </div>
-              <span>Barcelona City Tour</span>
-              <div>
-                <span>★★★★★</span>
-                <span>7 Days tour</span>
-              </div>
-            </article>
-          </li>
+        <li>
+          <article class="trip-planners-card">
+            <img src="img/barcelona.jpg" alt="Barcelona streets" class="trip-planners-card__image">
+            <div>
+              <span>Guided Tour</span>
+              <span>€89/Day</span>
+            </div>
+            <span class="trip-planners-card__city">Barcelona City Tour</span>
+            <div class="trip-planners-card__rating">
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
 
-          <li>
-            <article>
-              <img src="img/budapest.jpg" alt="Budapest sculpture">
-              <div>
-                <span>Guided Tour</span>
-                <span>€89/Day</span>
-              </div>
-              <span>Budapest City Tour</span>
-              <div>
-                <span>★★★★★</span>
-                <span>7 Days tour</span>
-              </div>
-            </article>
-          </li>
-        </ul>
+        <li>
+          <article class="trip-planners-card">
+            <img src="img/budapest.jpg" alt="Budapest sculpture" class="trip-planners-card__image">
+            <div class="trip-planners-card__description">
+              <span>Guided Tour</span>
+              <span>€89/Day</span>
+            </div>
+            <span class="trip-planners-card__city">Budapest City Tour</span>
+            <div class="trip-planners-card__rating">
+              <span>★★★★★</span>
+              <span>7 Days tour</span>
+            </div>
+          </article>
+        </li>
+      </ul>
 
-        <button>View all trip plans</button>
+      <button class="trip-planners__button">View all trip plans</button>
     </section>
 
     <section class="traveler-experiences">
