add styles to main form

--- a/src/index.html
+++ b/src/index.html
@@ -10,52 +10,52 @@
   <title>Travellian</title>
 </head>
 
-<body style="background-color:bisque;">
-
-  <header class="header">
-    <img src="img/logo.svg" alt="Travellian logo" width="200" height="300">
-    <nav>
-      <ul>
-        <li>
-          <a href="">Home</a>
-        </li>
-        <li>
-          <a href="">Popular destinations</a>
-        </li>
-        <li>
-          <a href="">Special offer</a>
-        </li>
-        <li>
-          <a href="">Our blog</a>
-        </li>
-        <li>
-          <a href="">Trip planners</a>
-        </li>
-        <li>
-          <a href="">Traveler's experiences</a>
-        </li>
-      </ul>
-    </nav>
-    <i class="fa-solid fa-bars"></i>
-
-    <div>
-      <a href="login">Log in</a>
-      <a href="signup">Sign up</a>
-    </div>
-
-  </header>
+<body>
 
   <main>
 
-    <section top-section>
+    <section class="top-section">
+
+      <header class="header">
+        <img class="header__logo" src="img/logo.svg" alt="Travellian logo" width="200" height="70">
+        <nav>
+          <ul class="header__navbar">
+            <li>
+              <a href="">Home</a>
+            </li>
+            <li>
+              <a href="">Popular destinations</a>
+            </li>
+            <li>
+              <a href="">Special offer</a>
+            </li>
+            <li>
+              <a href="">Our blog</a>
+            </li>
+            <li>
+              <a href="">Trip planners</a>
+            </li>
+            <li>
+              <a href="">Traveler's experiences</a>
+            </li>
+          </ul>
+        </nav>
+        <i class="fa-solid fa-bars"></i>
+
+        <div class="header__buttons">
+          <a href="login">Log in</a>
+          <a href="signup">Sign up</a>
+        </div>
+
+      </header>
 
       <section class="top-section__headings">
         <h1 class="top-section__main-heading">Start your unforgettable journey with us.</h1>
         <span class="top-section__motto">The best travel for your journey begins now</span>
       </section>
 
-      <section class="main-form">
-        <form class=>
+      <section>
+        <form class="main-form">
 
           <div class="main-form__input">
             <label>Destination</label>
@@ -78,7 +78,7 @@
           </div>
 
           <div class="main-form__submit">
-            <span>Book now</span>
+            <span>Book Now</span>
             <i class="fa-solid fa-arrow-right"></i>
           </div>
         </form>
