add style to main top form

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
           <div class="main-form__input">
             <label>Destination</label>
-            <input type="text" required>
+            <input type="text" autofocus required>
           </div>
 
           <div class="main-form__input">
