--- a/src/index.html
+++ b/src/index.html
@@ -90,18 +90,19 @@
     <section class="popular-destinations">
       <div>
         <h2 class="popular-destinations__heading">Popular Destinations</h2>
-        <p class="popular-destinations__description">Most popular destinations around the world, from historical places
-          to natural wonders.</p>
+        <span class="popular-destinations__description">Most popular destinations around the world, from historical
+          places
+          to natural wonders.</span>
       </div>
 
       <ul class="popular-destinations__cards">
         <li>
           <article class="popular-destinations-card">
             <img src="img/berlin.jpg" alt="monument of berlin">
-            <div>
+            <div class="popular-destinations-card__text-container">
+              <i class="fa-solid fa-location-dot"></i>
               <span class="popular-destinations-card__title">Monument of Berlin</span>
               <span class="popular-destinations-card__location">Berlin, Germany</span>
-              <i class="fa-solid fa-location-dot"></i>
             </div>
           </article>
         </li>
@@ -110,9 +111,9 @@
           <article class="popular-destinations-card">
             <img src="img/millenium.jpg" alt="Millenium Bridge">
             <div>
+              <i class="fa-solid fa-location-dot"></i>
               <span class="popular-destinations-card__title">Millenium Bridge</span>
               <span class="popular-destinations-card__location">London, United Kingdom</span>
-              <i class="fa-solid fa-location-dot"></i>
             </div>
           </article>
         </li>
@@ -121,9 +122,9 @@
           <article class="popular-destinations-card">
             <img src="img/venice.jpg" alt="Rialto Bridge">
             <div>
+              <i class="fa-solid fa-location-dot"></i>
               <span class="popular-destinations-card__title">Rialto Bridge</span>
               <span class="popular-destinations-card__location">Venice, Italy</span>
-              <i class="fa-solid fa-location-dot"></i>
             </div>
           </article>
         </li>
@@ -204,8 +205,8 @@
         </li>
       </ul>
 
-      <button><i class="fa-solid fa-angle-left"></i></button>
-      <button><i class="fa-solid fa-angle-right"></i></button>
+      <button class="button-left"><i class="fa-solid fa-angle-left"></i></button>
+      <button class="button-right"><i class="fa-solid fa-angle-right"></i></button>
 
     </section>
 
