--- a/src/index.html
+++ b/src/index.html
@@ -131,8 +131,8 @@
       </ul>
 
       <div>
-        <button><i class="fa-solid fa-angle-left"></i></button>
-        <button><i class="fa-solid fa-angle-right"></i></button>
+        <button class="button-left"><i class="fa-solid fa-angle-left"></i></button>
+        <button class="button-right"><i class="fa-solid fa-angle-right"></i></button>
       </div>
 
     </section>
@@ -366,8 +366,8 @@
         </li>
       </ul>
 
-      <button><i class="fa-solid fa-angle-left"></i></button>
-      <button><i class="fa-solid fa-angle-right"></i></button>
+      <button class="button-left"><i class="fa-solid fa-angle-left"></i></button>
+      <button class="button-right"><i class="fa-solid fa-angle-right"></i></button>
 
     </section>
 
